--- a/index.html
+++ b/index.html
@@ -386,50 +386,66 @@
     /************ Datos base ************/
     // Soporta pref como string o array de strings
     const originalData = [
-      { name: "Disney Tokyo", img: "img/disney.jpg", pref: "Tokyo" },
-      { name: "Gotokuji", img: "img/gotokuji.jpg", pref: "Tokyo" },
-      { name: "Pokemon Cafe", img: "img/pokemon.jpg", pref: "Tokyo" },
-      { name: "Shikisai no oka", img: "imggreat job/shikisai.jpg", pref: "Hokkaido" },
-      { name: "Shinkansen Hello Kitty", img: "img/hello-kitty.jpg", pref: ["Fukuoka","Yamaguchi"] },
-      { name: "Maid cafe", img: "img/maid.jpg", pref: "Tokyo" },
-      { name: "Nabana no sato", img: "img/nabana.jpg", pref: "Mie" },
-      { name: "Otaru", img: "img/otaru.jpg", pref: "Hokkaido" },
-      { name: "Nagano y monos de nieve", img: "img/nagano.jpg", pref: "Nagano" },
-      { name: "RJ Cafe Osaka", img: "img/rj-cafe.jpg", pref: "Osaka" },
-      { name: "Kumachan Onsen Tokyo", img: "img/kumachan.jpg", pref: "Tokyo" },
-      { name: "Enoshima", img: "img/enoshima.jpg", pref: "Kanagawa" },
-      { name: "Ginzan Onsen", img: "img/ginzan.jpg", pref: "Yamagata" },
-      { name: "Tarde de recreativas", img: "img/arcade.jpg", pref: "Tokyo" },
-      { name: "Shibazakura park Hokkaido", img: "img/shibazakura.jpg", pref: "Hokkaido" },
-      { name: "Musical Tokyo Revengers", img: "img/tokyo-revengers.jpg", pref: "Tokyo" },
-      { name: "Eventos de mangas específicos", img: "img/kisekoi.jpg", pref: "Tokyo" },
-      { name: "Museo/cafe de los yokai", img: "img/yokai.jpg", pref: "Tottori" },
-      { name: "Kumamoto", img: "img/kumamoto.jpg", pref: "Kumamoto" },
-      { name: "Beppu", img: "img/beppu.jpg", pref: "Oita" },
-      { name: "Bandai Museum", img: "img/bandai.jpg", pref: "Tochigi" },
-      { name: "Tanuki Dori", img: "img/tanuki.jpg", pref: "Hokkaido" },
-      { name: "Coleccionar Manhole cards", img: "img/manhole.jpg", pref: "" }, // Sin prefectura (solo tabla)
-      { name: "Entrar a Sekaido o Itoya (90 pisos de material de arte)", img: "img/se великих kaido.jpg", pref: "Tokyo" },
-      { name: "Doraemon time square", img: "img/doraemon.jpg", pref: "Toyama" },
-      { name: "Shiroi Koibito Park", img: "img/shiroi-koibito.jpg", pref: "Hokkaido" },
-      { name: "2D Café Tokyo", img: "img/2dcafe.jpg", pref: "Tokyo" },
-      { name: "Comer en Tofuro Ginza", img: "img/tofuro.jpg", pref: "Tokyo" },
-      { name: "Music box Museum", img: "img/musicbox.jpg", pref: "Hokkaido" },
-      { name: "Aitama Daibutsu (Buddha y moais)", img: "img/aitama.jpg", pref: "Saitama" },
-      { name: "Hakone", img: "img/hakone.jpg", pref: "Kanagawa" },
-      { name: "Nikko", img: "img/nikko.jpg", pref: "Tochigi" },
-      { name: "Oarai Isosaki shrine", img: "img/oarai.jpg", pref: "Ibaraki" },
-      { name: "Dormir en Ryokan Ookawaso", img: "img/ookawaso.jpg", pref: "Fukushima" },
-      { name: "Museo de Nintendo", img: "img/nintendo.jpg", pref: "Kyoto" },
-      { name: "Dormir en Onyado Nono Kyoto", img: "img/onyado.jpg", pref: "Kyoto" },
-      { name: "Katsuouji y postal de Darumas", img: "img/katsuouji.jpg", pref: "Osaka" },
-      { name: "Dormir en Toggle (cada habitación es de un único color completa)", img: "img/toggle.jpg", pref: "Tokyo" },
-      { name: "Dormir en Henn na hotel", img: "img/hennna.jpg", pref: "Nagasaki" },
-      { name: "Probar los simulacros de terremotos", img: "img/terremoto.jpg", pref: "Tokyo" },
-      { name: "Ir a ver sumo", img: "img/sumo.jpg", pref: "Tokyo" },
-      { name: "Ir a ver kabuki", img: "img/kabuki.jpg", pref: "Tokyo" },
-      { name: "Ushiku Daibutsu", img: "img/ushiku.jpg", pref: "Ibaraki" },
-      { name: "Tienda de Chopper", img: "img/mugiwara.jpg", pref: "Tokyo" }
+  { name: "Disney Tokyo", img: "img/disney.jpg", pref: ["Tokyo"] },
+  { name: "Gotokuji", img: "img/gotokuji.jpg", pref: ["Tokyo"] },
+  { name: "Pokemon Cafe", img: "img/pokemon.jpg", pref: ["Tokyo","Osaka"] },
+  { name: "Shikisai no oka", img: "img/shikisai.jpg", pref: ["Hokkaido"] },
+  { name: "Shinkansen Hello Kitty", img: "img/hello-kitty.jpg", pref: ["Fukuoka","Yamaguchi","Hiroshima","Okayama","Osaka"] },
+  { name: "Maid Cafe Akihabara", img: "img/maid.jpg", pref: ["Tokyo"] },
+  { name: "Nabana no Sato (Festival de Iluminación hasta mayo)", img: "img/nabana.jpg", pref: ["Mie"] },
+  { name: "Otaru", img: "img/otaru.jpg", pref: ["Hokkaido"] },
+  { name: "Jigokudani Monkey Park", img: "img/nagano.jpg", pref: ["Nagano"] },
+  { name: "RJ Cafe Osaka", img: "img/rj-cafe.jpg", pref: ["Osaka"] },
+  { name: "Kumachan Onsen Tokyo", img: "img/kumachan.jpg", pref: ["Tokyo"] },
+  { name: "Toyosu Senkyaku Banrai (Onsen estilo Edo)", img: "img/toyosu.jpg", pref: ["Tokyo"] },
+  { name: "Enoshima", img: "img/enoshima.jpg", pref: ["Kanagawa"] },
+  { name: "Ginzan Onsen", img: "img/ginzan.jpg", pref: ["Yamagata"] },
+  { name: "Tarde de recreativas Akihabara", img: "img/arcade.jpg", pref: ["Tokyo"] },
+  { name: "Shibazakura Park (Festival de flores, mayo 2026)", img: "img/shibazakura.jpg", pref: ["Hokkaido"] },
+  { name: "Fuji Shibazakura Festival en Monte Fuji (hasta finales de mayo 2026)", img: "img/fuji-shibazakura.jpg", pref: ["Yamanashi"] },
+  { name: "Musical Tokyo Revengers", img: "img/tokyo-revengers.jpg", pref: ["Tokyo"] },
+  { name: "Eventos de mangas/anime varios", img: "img/kisekoi.jpg", pref: ["Tokyo"] },
+  { name: "Museo/Café de los Yokai", img: "img/yokai.jpg", pref: ["Tottori"] },
+  { name: "Kumamoto", img: "img/kumamoto.jpg", pref: ["Kumamoto"] },
+  { name: "Beppu (onsen y jigoku meguri)", img: "img/beppu.jpg", pref: ["Oita"] },
+  { name: "Bandai Museum", img: "img/bandai.jpg", pref: ["Tochigi"] },
+  { name: "Tanuki Koji Shopping Street", img: "img/tanuki.jpg", pref: ["Hokkaido"] },
+  { name: "Coleccionar Manhole Cards", img: "img/manhole.jpg", pref: [] },
+  { name: "Sekaido (material de arte)", img: "img/sekaido.jpg", pref: ["Tokyo"] },
+  { name: "Itoya (90 pisos de papelería)", img: "img/itoyapaper.jpg", pref: ["Tokyo"] },
+  { name: "Doraemon Time Square", img: "img/doraemon.jpg", pref: ["Toyama"] },
+  { name: "Shiroi Koibito Park", img: "img/shiroi-koibito.jpg", pref: ["Hokkaido"] },
+  { name: "2D Café Tokyo", img: "img/2dcafe.jpg", pref: ["Tokyo"] },
+  { name: "Tofuro Ginza (restaurante temático)", img: "img/tofuro.jpg", pref: ["Tokyo"] },
+  { name: "Music Box Museum", img: "img/musicbox.jpg", pref: ["Hokkaido"] },
+  { name: "Aitama Daibutsu (Buddha y moais)", img: "img/aitama.jpg", pref: ["Saitama"] },
+  { name: "Hakone (onsen y naturaleza)", img: "img/hakone.jpg", pref: ["Kanagawa"] },
+  { name: "Nikko", img: "img/nikko.jpg", pref: ["Tochigi"] },
+  { name: "Oarai Isosaki Shrine", img: "img/oarai.jpg", pref: ["Ibaraki"] },
+  { name: "Ryokan Ookawaso (dormir en onsen)", img: "img/ookawaso.jpg", pref: ["Fukushima"] },
+  { name: "Museo de Nintendo", img: "img/nintendo.jpg", pref: ["Kyoto"] },
+  { name: "Onyado Nono Kyoto (hotel onsen)", img: "img/onyado.jpg", pref: ["Kyoto"] },
+  { name: "Katsuouji y postal de Darumas", img: "img/katsuouji.jpg", pref: ["Osaka"] },
+  { name: "Toggle Hotel (habitaciones monocromáticas)", img: "img/toggle.jpg", pref: ["Tokyo"] },
+  { name: "Henn na Hotel", img: "img/hennna.jpg", pref: ["Tokyo","Nagoya","Osaka","Nagasaki"] },
+  { name: "Simulacro de terremotos (Bousai Center)", img: "img/terremoto.jpg", pref: ["Tokyo"] },
+  { name: "Torneo de Sumo (mayo en Tokyo)", img: "img/sumo.jpg", pref: ["Tokyo"] },
+  { name: "Kabuki-za (teatro kabuki)", img: "img/kabuki.jpg", pref: ["Tokyo"] },
+  { name: "Ushiku Daibutsu", img: "img/ushiku.jpg", pref: ["Ibaraki"] },
+  { name: "Tienda de Chopper (One Piece Mugiwara Store)", img: "img/mugiwara.jpg", pref: ["Tokyo","Osaka"] },
+
+  // Festivales confirmados mayo 2026
+  { name: "Kanda Matsuri (15–17 mayo 2026)", img: "img/kanda.jpg", pref: ["Tokyo"] },
+  { name: "Aoi Matsuri (15 mayo 2026)", img: "img/aoi.jpg", pref: ["Kyoto"] },
+  { name: "Sanjo Shinsengumi Festival (10 mayo 2026)", img: "img/shinsengumi.jpg", pref: ["Kyoto"] },
+  { name: "Hakone Daimyo Gyoretsu (mayo 2026)", img: "img/hakone-matsuri.jpg", pref: ["Kanagawa"] },
+
+  // Trenes especiales (en servicio en mayo)
+  { name: "Pokémon With You Train", img: "img/train-pokemon.jpg", pref: ["Iwate","Miyagi"] },
+  { name: "Hello Kitty Shinkansen", img: "img/train-hello-kitty.jpg", pref: ["Fukuoka","Yamaguchi","Hiroshima","Okayama","Osaka"] },
+  { name: "Thomas Land Train", img: "img/train-thomas.jpg", pref: ["Yamanashi"] }
+];
+
     ];
 
     /************ Estado ************/
@@ -1156,3 +1172,4 @@
   </script>
 </body>
 </html>
+
