--- a/index.html
+++ b/index.html
@@ -433,6 +433,41 @@
   { name: "Kabuki-za (teatro kabuki)", img: "img/kabuki.jpg", pref: ["Tokyo"] },
   { name: "Ushiku Daibutsu", img: "img/ushiku.jpg", pref: ["Ibaraki"] },
   { name: "Tienda de Chopper (One Piece Mugiwara Store)", img: "img/mugiwara.jpg", pref: ["Tokyo","Osaka"] },
+  { name: "Ir de Karaoke", img: "img/karaoke.jpg", pref: [] },
+  { name: "Ver la arena de playa en forma de estrellas", img: "img/starsand.jpg", pref: ["Okinawa"] },
+  { name: "Ine", img: "img/ine.jpg", pref: ["Kyoto"] },
+  { name: "Sado", img: "img/sado.jpg", pref: ["Niigata"] },
+  { name: "Monte Fuji en Kawaguchiko", img: "img/sado.jpg", pref: ["Yamanashi"] },
+  { name: "Shirakawa-go (pueblo tradicional)", img: "img/shirakawa.jpg", pref: ["Gifu"] },
+  { name: "Kenroku-en", img: "img/kenrokuen.jpg", pref: ["Ishikawa"] },
+  { name: "Himeji Castle", img: "img/himeji.jpg", pref: ["Hyogo"] },
+  { name: "Kawachi Fuji Garden", img: "img/kawachi.jpg", pref: ["Fukuoka"] },
+  { name: "Churaumi Aquarium", img: "img/churaumi.jpg", pref: ["Okinawa"] },
+  { name: "Aogashima (isla volcánica)", img: "img/aogashima.jpg", pref: ["Tokyo"] },
+  { name: "Koyasan, templos budistas", img: "img/koyasan.jpg", pref: ["Wakayama"] },
+  { name: "Legoland", img: "img/legoland.jpg", pref: ["Aichi"] },
+  { name: "CupNoodles Museum", img: "img/cupnoodles.jpg", pref: ["Kanagawa"] },
+  { name: "Ryukyu Village", img: "img/ryukyu.jpg", pref: ["Okinawa"] },
+  { name: "Robot Restaurant Show", img: "img/robot.jpg", pref: ["Tokyo"] },
+  { name: "Okunoshima (Como Nara, pero con conejos)", img: "img/okunoshima.jpg", pref: ["Hiroshima"] },
+  { name: "Tottori Sand Dunes", img: "img/tottori-sand.jpg", pref: ["Tottori"] },
+  { name: "Takachiho Gorge", img: "img/takachiho.jpg", pref: ["Miyazaki"] },
+  { name: "Omoide Yokocho", img: "img/omoide.jpg", pref: ["Tokyo"] },
+  { name: "Mount Aso (volcán activo)", img: "img/aso.jpg", pref: ["Kumamoto"] },
+  { name: "Yakushima", img: "img/yakushima.jpg", pref: ["Kagoshima"] },
+  { name: "Oasis 21", img: "img/oasis21.jpg", pref: ["Aichi"] },
+  { name: "Matsuyama Dogo Onsen", img: "img/dogo.jpg", pref: ["Ehime"] },
+  { name: "Aoshima", img: "img/aoshima.jpg", pref: ["Ehime"] },
+  { name: "Mikurajima", img: "img/mikurajima.jpg", pref: ["Tokyo"] },
+  { name: "Asahiyama Zoo", img: "img/asahiyama.jpg", pref: ["Hokkaido"] },
+  { name: "Shiretoko", img: "img/shiretoko.jpg", pref: ["Hokkaido"] },
+  { name: "Café Final Fantasy Eorzea", img: "img/ffxiv.jpg", pref: ["Tokyo"] },
+  { name: "Onsen de capibaras", img: "img/capy-onsen.jpg", pref: ["Nagano"] },
+
+
+
+
+
 
   // Festivales confirmados mayo 2026
   { name: "Kanda Matsuri (15–17 mayo 2026)", img: "img/kanda.jpg", pref: ["Tokyo"] },
@@ -1172,4 +1207,5 @@
   </script>
 </body>
 </html>
+
 
